[project]
name = "dfa-gym"
version = "0.2.13"
description = "Python library for playing DFA bisimulation games and wrapping other RL environments with DFA goals."
authors = [
    { name = "Beyazit Yalcinkaya", email = "beyazit@berkeley.edu" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dfax>=0.1.13",
]

[project.optional-dependencies]
cuda = [
    "dfax[cuda]>=0.1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
